# data-app-streamlit

./: app.py  pyproject.toml  secrets_utils.py  start.ps1  start.sh
.memex/: context.md  resources.json  settings.json
.streamlit/: config.toml
.workshop/: context.md  settings.json
