[project]
name = "data-app"
version = "0.1.0"
description = "Data App Description"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.28.1",
    "matplotlib==3.10.8",
    "numpy==2.3.5",
    "pandas==2.3.3",
    "plotly==6.5.0",
    "streamlit==1.52.2",
]

[tool.uv]
exclude-newer = "14 days"
# workshop-connect is published by us; exempt from the rolling window.
exclude-newer-package = { workshop-connect = "2027-01-01" }
